fix bug on mobile-version catalog.html (opening with wrong viewport)

--- a/source/less/blocks/feature-list.less
+++ b/source/less/blocks/feature-list.less
@@ -1,7 +1,7 @@
 .feature-list {
   display: flex;
   flex-direction: column;
-  width: 320px;
+  width: 140px;
   .zero-margin();
   list-style: none;
 
