--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -415,6 +415,7 @@
     &__target-list {
       margin: 0 auto;
       margin-top: 20px;
+      padding-top: 5px;
       display: flex;
       flex-direction: column;
       box-sizing: border-box;
@@ -423,7 +424,7 @@
     }
 
     &__target-item {
-      margin-top: 31px;
+      margin-top: 23px;
     }
 
     &__target-item:last-of-type {
